# ai-rag-ebook-platform

./: DEPLOYMENT.md  README copy.md  README.md  chapter_info.py  docker-compose.yml  tasks copy.md
.claude/: settings.local.json
.claude/agents/: chapter-author.md
.claude/skills/: better-auth-neondb-integration.md  book‑chapter‑template.md  mdx-format-validator.md  (+1 more)
auth-server/: Dockerfile  README.md  package-lock.json  package.json
backend/: Dockerfile  pyproject.toml  requirements.txt  test_db_connection.py
backend/src/: db_init.py  main.py  reset_db.py
backend/src/agents/: rag_agent.py  summarizer_agent.py  triage_agent.py
backend/src/config/: database.py  llm.py  logging.py
backend/src/dependencies/: auth.py
backend/src/middleware/: auth_middleware.py
backend/src/models/: __init__.py  api_routes.py  context.py  conversation.py  message.py  session.py  user.py
backend/src/routers/: agent_router.py  conversation_router.py  user_router.py
backend/src/services/: chunker_service.py  conversation_service.py  embedding_service.py  ingestion_pipeline.py  mdx_parser.py  message_service.py  qdrant_service.py  retriever.py  user_service.py  verify_metadata.py
backend/src/tests/: agent.py
backend/src/utils/: __init__.py  logging_config.py  token_utils.py  token_validator.py
backend/tests/: test_auth_middleware.py  test_chat_persistence.py  test_conversation_endpoints.py  test_token_verification.py  test_user_endpoints.py
frontend/: .npmignore  docusaurus.config.ts  package-lock.json  package.json  sidebars.ts
testing/: main.py  pyproject.toml
(+121 files in other folders)
